--- a/config/public/config.json
+++ b/config/public/config.json
@@ -1,6 +1,6 @@
 {
-    "cityname": "Chicago",
-    "cityresidentname": "Chicagoan",
-    "stateabbrev": "IL",
-    "citycentercoordinates": [41.881, -87.629]
+    "cityname": "Denver",
+    "cityresidentname": "Denverite",
+    "stateabbrev": "CO",
+    "citycentercoordinates": [39.7642224,-105.0199172]
 }
